Revert "BUGFIX: Add explicit `0` z-index to `cms-content` so the menu toggle can render above it (#620)"
This reverts commit 5488b31f84f47a18d40cf34d7da53d498b169496.

--- a/client/src/styles/legacy/_style.scss
+++ b/client/src/styles/legacy/_style.scss
@@ -1374,7 +1374,6 @@ form.member-profile-form {
   .cms-content {
     background: $body-bg;
     height: 100%;
-    z-index: 0;
   }
 
   .cms-content-fields {
